@@ -26,11 +26,11 @@ import java.util.List;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.nuxeo.audit.service.AuditComponent;
 import org.nuxeo.ecm.core.api.CoreSession;
 import org.nuxeo.ecm.core.api.DocumentModel;
 import org.nuxeo.ecm.core.api.IdRef;
 import org.nuxeo.ecm.core.api.versioning.VersioningService;
-import org.nuxeo.ecm.platform.audit.service.NXAuditEventsService;
 import org.nuxeo.ecm.platform.dublincore.listener.DublinCoreListener;
 import org.nuxeo.ecm.platform.ec.notification.NotificationConstants;
 import org.nuxeo.retention.RetentionConstants;
@@ -112,15 +112,17 @@ public class Record {
     }
 
     protected void save(CoreSession session) {
+        document.putContextData(VersioningService.DISABLE_AUTOMATIC_VERSIONING, true);
         document.putContextData(DublinCoreListener.DISABLE_DUBLINCORE_LISTENER, true);
         document.putContextData(NotificationConstants.DISABLE_NOTIFICATION_SERVICE, true);
-        document.putContextData(NXAuditEventsService.DISABLE_AUDIT_LOGGER, true);
+        document.putContextData(AuditComponent.DISABLE_AUDIT_LOGGER, true);
         document.putContextData(VersioningService.DISABLE_AUTO_CHECKOUT, true);
         document.putContextData(RetentionConstants.RETENTION_CHECKER_LISTENER_IGNORE, true);
         session.saveDocument(document);
+        document.putContextData(VersioningService.DISABLE_AUTOMATIC_VERSIONING, null);
         document.putContextData(DublinCoreListener.DISABLE_DUBLINCORE_LISTENER, null);
         document.putContextData(NotificationConstants.DISABLE_NOTIFICATION_SERVICE, null);
-        document.putContextData(NXAuditEventsService.DISABLE_AUDIT_LOGGER, null);
+        document.putContextData(AuditComponent.DISABLE_AUDIT_LOGGER, null);
         document.putContextData(VersioningService.DISABLE_AUTO_CHECKOUT, null);
         document.getContextData().remove(RetentionConstants.RETENTION_CHECKER_LISTENER_IGNORE);
     }
@@ -130,7 +132,7 @@ public class Record {
     }
 
     public void setRule(RetentionRule rule, CoreSession session) {
-        setRuleIds(Arrays.asList(rule.getDocument().getId()));
+        setRuleIds(List.of(rule.getDocument().getId()));
         save(session);
     }
 
